--- a/exercise2/TipCalculator/MainPage.xaml
+++ b/exercise2/TipCalculator/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TipCalculator"
+             xmlns:mycode="clr-namespace:TipCalculator"
              x:Class="TipCalculator.MainPage">
 
     <VerticalStackLayout>
@@ -23,7 +24,7 @@
         <Button Text="20%" Clicked="OnGenerousTip" />
 
         <Button x:Name="roundDown" Text="Round Down" />
-        <Button x:Name="roundUp"   Text="Round Up" />
+        <Button x:Name="roundUp"   Text="Round Up" FontSize="{mycode:GlobalFontSize}"/>
 
     </VerticalStackLayout>
 
